discussion/kv_engine/179608/179608_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53584: Force through throttled cookies during Bucket delete

Currently we hang if we delete a Bucket when we have throttled cookies
in the system. This is because we set cookies ewouldblock state to true
when we throttle them so we must wait for them when disconnecting
connections and we stop ticking the throttle gauge then a Bucket is not
in the ready state so no notification is made to progress the
cookie/connection.

Change-Id: I236bb725fb5329b87ca4b8fd7c3f8883e241359f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-06 08:56:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-06 09:29:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20049/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:117:38: error: member access into incomplete type "cb::test::AuthProviderService" [clang-diagnostic-error]
    cluster->getAuthProviderService().upsertUser(
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cluster_framework/cluster.h:28:7: note: forward declaration of "cb::test::AuthProviderService"
class AuthProviderService;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20049/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:117:38:
error: member access into incomplete type "cb::test::AuthProviderService" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20049/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49005/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.300701\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (32 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49005/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9847/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-09-06T09:09:18.894Z] unknown file: Failure
[2022-09-06T09:09:18.894Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCanExceedDocumentLimit_Mcbp_XattrYes_JsonNo_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-09-06T09:09:18.894Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (0 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9847/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19270/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41195/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9748/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21338/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22012/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22369/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23109/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30401/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
